<resources>
    <string name="app_name">云智会</string>
    <string name="app_company_name">"甜新科技（上海）有限公司"</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_user">请输入手机号/邮箱</string>
    <string name="hint_roomno">请输入房间号</string>
    <string name="hint_roompass">请输入房间密码</string>
    <string name="hint_username">请输入姓名</string>
    <string name="login_error">账号或密码输入有误</string>
    <string name="facelogin_error">登录失败!</string>
    <string name="onekeyenter_error">房间或密码输入有误</string>
    <string name="login">登录</string>
    <string name="onekey_enter">一键参会</string>
    <string name="back_to_last">返回</string>
    <string name="account_login">账号登录</string>
    <string name="account_facelogin_retry">"重  试"</string>
    <string name="firstsetting_setting">去设置</string>
    <string name="firstsetting_skip">跳过</string>
    <string name="account_facelogin">刷脸登录</string>
    <string name="account_face_box">脸部对准识别框</string>
    <string name="account_face_left_right">左右转动头部</string>
    <string name="account_face_eye">眨眨眼睛</string>
    <string name="account_face_confirming">正在验证</string>
    <string name="account_face_ok">验证成功!</string>
    <string name="account_face_failed">验证失败!</string>
    <string name="account_face_retry">重新验证</string>
    <string name="loginng">正在登录中...</string>
    <string name="logoff">退出登录</string>
    <string name="roomno_empty">房间号没有输入</string>
    <string name="conference_tilte">会议主题</string>
    <string name="hint_conference_tilte">请输入会议主题</string>
    <string name="conference_input">请填写</string>
    <string name="conference_add_device">会议室设备</string>
    <string name="conference_starttime">开始时间</string>
    <string name="conference_costtime">持续时长</string>
    <string name="logoff_sure">确定退出登录吗?</string>
    <string name="error_logoff">退出登录失败，请重试!</string>
    <string name="error_re_login">帐号异常，请重新登录!</string>
    <string name="forget_the_password">忘记密码</string>
    <string name="create_room">创建会议</string>
    <string name="createing_room">正在创建会议...</string>
    <string name="enter_room">进入会议</string>
    <string name="createing_room_failed">创建房间失败</string>
    <string name="conference_end">会议已结束</string>
    <string name="entering_room">正在进入会议...</string>
    <string name="deleteing_room">正在删除会议...</string>
    <string name="enter_room_failed">获取房间token失败，请重试~</string>
    <string name="not_start">未开始</string>
    <string name="add_attendee">添加参会人</string>
    <string name="add_attendee_device">添加会议室设备</string>
    <string name="add_attendee_number">添加参会人(%s)</string>
    <string name="add_attendee_and_device">添加参会</string>
    <string name="add_attendee_number2">添加参会人&#160;&#160;</string>
    <string name="begin_time">开始时间</string>
    <string name="continue_time">持续时长</string>
    <string name="created">确认创建</string>
    <string name="choose">请选择</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="room_number">房间号：%s</string>
    <string name="attendee_number">参会人&#160;&#160;</string>
    <string name="begin_time_value">房间: %s %s  %s小时  %s</string>
    <string name="permission_camera">是否允许添加摄像头和录音权限？</string>
    <string name="permission_phone_address">是否允许访问手机通讯录？</string>
    <string name="error_unknow">网络异常,请重新连接</string>
    <string name="error_facelogin_error_retry">登录失败,请重试。</string>
    <string name="error_unknow_retry">未知异常,请重试。</string>
    <string name="error_face_collect_retry">验证失败,请重试。</string>
    <string name="error_unknow_getrooms">获取房间信息失败，请重试</string>
    <string name="conference_unknow">会议</string>
    <string name="error_enter_room">加入房间失败，请重试。</string>
    <string name="finish">完成</string>
    <string name="tip">提示</string>
    <string name="tip_quit_meet">确定退出会议吗？</string>
    <string name="tip_net_disconnect">网络已断开</string>
    <string name="tip_net_disconnect_message">"请检查网络后，重新进入会议室！"</string>
    <string name="starttime_before_nowtime">会议开始时间不能晚于当前时间！</string>
    <string name="loading_rooms">正在加载会议...</string>
    <string name="geting_room_info">正在获取房间信息...</string>
    <string name="loading_loginoff">正在退出...</string>
    <string name="loading_add_attendee">正在添加参会人...</string>
    <string name="loading_conference_connect">正在建立会议连接...</string>
    <string name="tips_invite_success">添加参会人成功</string>
    <string name="add_conference_attend">添加参会</string>
    <string name="delete_conference">取消会议</string>
    <string name="back_to_front">返回首页</string>
    <string name="leave_app">再按一次返回键退出应用</string>
    <string name="invite_friend">邀请外部好友</string>
    <string name="invite_sms_friend">短信邀请好友</string>
    <string name="delete_conference_confirm">确认要取消该会议房间?</string>
    <string name="company_address">企业通讯录</string>
    <string name="conference_device">会议室设备</string>
    <string name="phone_address">手机短信</string>
    <string name="weixin_friend">微信好友</string>
    <string name="sms_message">"【云智会】 %1$s邀请您参加视频会议,时间:%2$s,房间号:%3$s,您可以在电脑/手机端从此链接进入：%4$s/#/LoginR/%3$s ，手机端下载\"云智会\"APP。"</string>
    <string name="ok">确定</string>
    <string name="facesetting_login">刷脸登录</string>
    <string name="menulayout_about">关于我们</string>
    <string name="facesetting_auth">人脸验证</string>
    <string name="item_facesetting_face_smalltext">是否开启使用刷脸方式登录账号？</string>
    <string name="item_facesetting_face_auth_smalltext">通过验证后可开启刷脸登录</string>
    <string name="facesetting_not_confirm_text">未验证</string>
    <string name="facesetting_already_confirm_text">已验证</string>
    <string name="login_facesetting_firstlogin">请先登录</string>
    <string name="facelogin_dialog_title">尚未开启</string>
    <string name="facelogin_dialog_message">您未开启刷脸登录，现在去设置？</string>
    <string name="facelogin_should_face_collect_first">尚未刷脸认证，请先确认再开启</string>
    <string name="facelogin_dialog_confirm">去设置</string>
    <string name="facelogin_dialog_cancel">稍后设置</string>
    <string name="about_company_name">甜新科技</string>
    <string name="about_company_gongzhonghao">公众号</string>
    <string name="about_company_phone">客服电话</string>
    <string name="about_company_phone_number">021-31184308</string>
    <string name="about_company_version">版本号</string>
    <string name="about_default_version">1.0</string>
    <string name="network_poor">当前网络不佳，已切为语音模式</string>
    <string name="metting_end_confirm_title">会议即将结束，是否尝试顺延？</string>
    <string name="metting_end_confirm_ok">尝试顺延</string>
    <string name="metting_end_confirm_skip">忽略</string>
    <string name="metting_extend_failed_title">抱歉，顺延时间冲突</string>
    <string name="metting_extend_failed_message">您可选择其他时间段进行尝试</string>
    <string name="metting_extend_failed_retry">重新尝试</string>
    <string name="metting_extend_10m">10分钟</string>
    <string name="metting_extend_30m">30分钟</string>
    <string name="metting_extend_60m">1个小时</string>
    <string name="metting_extend_success">顺延成功</string>
    <string name="metting_delete_user_error_unknow">移除参会人失败请重试</string>
    <string name="metting_room_delete_user">断开连接</string>
    <string name="metting_room_delete_useruser_message">您已被移出会议室</string>
    <string name="account_login_other_devices">您已掉线\n账号在另一设备登录</string>
    <string name="admin_finish_meet">管理员已将会议结束，请结束会议</string>
    <string name="present_delay_time">主持人已将会议顺延</string>
</resources>
