<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/chooseman_title_bar"
    style="@style/title_bar_style" >

    <TextView
        android:id="@+id/left_attandback_text"
        android:text="@string/cancel"
        style="@style/title_bar_button" />

    <TextView
        android:id="@+id/title_attand"
        style="@style/title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_attendee_number"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/right_attandfinish_text"
        android:text="@string/finish"
        style="@style/title_bar_button"
        android:layout_alignParentRight="true" />

</RelativeLayout>