<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/enter_et_roomno"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@mipmap/room_icon"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:textColorHint="@color/hint"
        android:hint="@string/hint_roomno"
        android:inputType="text"
        android:layout_marginTop="207.5dp"
        android:layout_width="310dp"
        android:layout_height="43dp" />

    <EditText
        android:id="@+id/enter_et_name"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@mipmap/edit_icon"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:textColorHint="@color/hint"
        android:inputType="text"
        android:hint="@string/hint_username"
        android:layout_below="@id/enter_et_roomno"
        android:layout_marginTop="22dp"
        android:layout_width="310dp"
        android:layout_height="43dp" />
    <TextView
        android:id="@+id/enter_tv_error"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:text="@string/onekeyenter_error"
        android:textColor="@color/orange"
        android:layout_below="@id/enter_et_name"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/enter_bt_enter"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/enter_et_name"
        android:layout_marginTop="147dp"
        android:layout_width="250dp"
        android:layout_height="43.5dp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:text="@string/enter_room"
        android:background="@drawable/login_corners"/>
    <Button
        android:id="@+id/enter_bt_back"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/enter_bt_enter"
        android:layout_marginTop="69dp"
        android:layout_width="250dp"
        android:layout_height="43.5dp"
        android:textSize="14sp"
        android:textColor="@color/orange"
        android:text="@string/back_to_last"
        android:background="@drawable/onekeyenter_corners"/>
</RelativeLayout>
