<?xml version="1.0" encoding="utf-8"?>  
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"
    android:background="@color/grey_attend"
    android:clickable="true"  
    android:orientation="vertical"  
    android:padding="20.0dip" >  
  
    <LinearLayout  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="10.0dip"/>
        <Button
        android:id="@+id/attend_bt_company_address"
        android:layout_width="300dp"
        android:layout_height="43.5dp"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:textColor="@color/grey_room"
        android:text="@string/company_address"
        android:background="@drawable/other_attend_bt_corners"/>
        <Button
            android:id="@+id/attend_bt_conference_device"
            android:layout_width="300dp"
            android:layout_height="43.5dp"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textColor="@color/grey_room"
            android:text="@string/conference_device"
            android:background="@drawable/other_attend_bt_corners"/>
        <Button
            android:id="@+id/attend_bt_phone_address"
            android:layout_width="300dp"
            android:layout_height="43.5dp"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textColor="@color/grey_room"
            android:text="@string/phone_address"
            android:background="@drawable/other_attend_bt_corners"/>
        <Button
            android:id="@+id/attend_bt_weixin"
            android:layout_width="300dp"
            android:layout_height="43.5dp"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textColor="@color/grey_room"
            android:text="@string/weixin_friend"
            android:background="@drawable/other_attend_bt_corners"/>
        <Button
            android:id="@+id/attend_bt_cancel"
            android:layout_width="300dp"
            android:layout_height="43.5dp"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textColor="@color/grey_room"
            android:text="@string/cancel"
            android:background="@drawable/other_attend_bt_corners"/>
        <View  
            android:layout_width="fill_parent"  
            android:layout_height="1.0px"
            android:background="@color/grey_attend" />
  
    </LinearLayout>  
  
</FrameLayout>  