<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@color/white">

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        layout="@layout/title_bar" />

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:src="@mipmap/login_icon" />

    <TextView
        android:id="@+id/about_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/app_name"
        android:textColor="@color/grey_room"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_above="@+id/about_company"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/about_company_version"
                android:textColor="@color/grey_room"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/about_version_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="0dp"
                android:text="@string/about_default_version"
                android:textColor="@color/grey_room"
                android:textSize="16sp" />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/divider_recycler"
            android:layout_height="1px"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/about_company_phone"
                android:textColor="@color/grey_room"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="0dp"
                android:text="@string/about_company_phone_number"
                android:textColor="@color/grey_room"
                android:textSize="16sp" />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/divider_recycler"
            android:layout_height="1px"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="@string/about_company_gongzhonghao"
                android:textColor="@color/grey_room"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="0dp"
                android:text="@string/about_company_name"
                android:textColor="@color/grey_room"
                android:textSize="16sp" />
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/divider_recycler"
            android:layout_height="1px"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/about_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/app_company_name"
        android:textColor="@color/grey_room"
        android:textSize="16sp"/>

</RelativeLayout>
