<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/frame_camera_draw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" >

        <SurfaceView
            android:id="@+id/surfaceview_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </SurfaceView>

        <SurfaceView
            android:id="@+id/surfaceview_rect"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </SurfaceView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/face_cover3"
        android:scaleType="centerCrop"
        />

    <FrameLayout
        android:id="@+id/frame_face_auto_circle"
        android:layout_width="286dp"
        android:layout_height="286dp"
        android:layout_marginTop="129dp"
        android:visibility="visible"
        android:layout_centerHorizontal="true" >
        <ImageView
            android:id="@+id/face_auto_circle_big"
            android:layout_width="286dp"
            android:layout_height="286dp"
            android:src="@mipmap/big_circle"
            android:scaleType="fitXY"
            />
        <ImageView
            android:id="@+id/face_auto_circle_small"
            android:layout_width="286dp"
            android:layout_height="286dp"
            android:src="@mipmap/small_circle"
            android:scaleType="fitXY"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/state_textview_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_layout"
        android:layout_marginBottom="90dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/account_facelogin"
        android:textSize="17sp"
        android:textColor="@color/grey_time" />

    <TextView
        android:id="@+id/state_textview_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_layout"
        android:layout_marginBottom="70dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/account_face_box"
        android:textSize="14sp"
        android:textColor="@color/grey_time" />
    <Button
        android:id="@+id/face_bt_retry"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bottom_layout"
        android:layout_width="100dp"
        android:layout_height="43.5dp"
        android:layout_marginBottom="40dp"
        android:textSize="14sp"
        android:textColor="@color/orange"
        android:text="@string/account_facelogin_retry"
        android:visibility="invisible"
        android:background="@drawable/facelogin_corners"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_layout"
        android:layout_alignParentBottom="true"
        android:background="@color/no_color" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/no_color"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal" >
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/face_bt_backto_login"
                android:layout_centerHorizontal="true"
                android:layout_width="0dp"
                android:layout_height="43.5dp"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textColor="@color/grey_time"
                android:text="@string/account_login"
                android:background="@drawable/facelogin_corners"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/face_bt_onekeyenter"
                android:layout_centerHorizontal="true"
                android:layout_width="0dp"
                android:layout_height="43.5dp"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textColor="@color/grey_time"
                android:text="@string/onekey_enter"
                android:background="@drawable/facelogin_corners"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
